--- a/index.html
+++ b/index.html
@@ -1,64 +1,65 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>GPT-4o Memory App</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>GPT-4o Unlimited Chat</title>
+  <meta charset="UTF-8">
   <style>
-    body { background: #000; color: #fff; padding: 10px; font-family: sans-serif; }
-    textarea { width: 100%; height: 100px; }
-    button { margin-top: 10px; padding: 10px; }
-    pre { white-space: pre-wrap; background: #111; padding: 10px; margin-top: 10px; border-radius: 5px; }
+    body { font-family: Arial; padding: 20px; background: #111; color: white; }
+    #chat { max-height: 70vh; overflow-y: auto; }
+    .msg { margin: 10px 0; }
+    .user { color: cyan; }
+    .bot { color: lime; }
+    input, button { padding: 10px; font-size: 16px; }
   </style>
 </head>
 <body>
-  <h2>GPT-4o with Memory</h2>
-  <textarea id="prompt" placeholder="Ask something..."></textarea>
-  <br>
-  <button onclick="sendPrompt()">Send</button>
-  <button onclick="clearMemory()">🗑️ Clear Chat</button>
-  <pre id="response">Reply will appear here...</pre>
+  <h2>GPT-4o Chat (Unlimited + Memory)</h2>
+  <div id="chat"></div>
+  <input id="userInput" placeholder="Type your message..." />
+  <button onclick="sendMessage()">Send</button>
 
   <script>
-    // Step 1: Load memory
-    let memory = JSON.parse(localStorage.getItem("chat_memory") || "[]");
+    const apiKey = "sk-..."  // <- ✅ yahan apna OpenRouter API key daal
+    const messages = [
+      { role: "system", content: "You are a helpful assistant with memory." }
+    ];
 
-    const API_KEY = "YOUR_API_KEY"; // <-- Replace this with your OpenRouter API key
+    async function sendMessage() {
+      const input = document.getElementById("userInput");
+      const userText = input.value.trim();
+      if (!userText) return;
 
-    async function sendPrompt() {
-      const prompt = document.getElementById("prompt").value.trim();
+      messages.push({ role: "user", content: userText });
+      showMessage("You: " + userText, "user");
+      input.value = "";
 
-      // Step 2: Add user input to memory
-      memory.push({ role: "user", content: prompt });
-
-      const res = await fetch("https://openrouter.ai/api/v1/chat/completions", {
+      const response = await fetch("https://openrouter.ai/api/v1/chat/completions", {
         method: "POST",
         headers: {
-          "Authorization": "Bearer " + API_KEY,
-          "Content-Type": "application/json"
+          "Authorization": `Bearer ${apiKey}`,
+          "Content-Type": "application/json",
+          "HTTP-Referer": "https://<terausername>.github.io", // 🔁 replace this
+          "X-Title": "GPT Mobile App"
         },
         body: JSON.stringify({
-          model: "openai/gpt-4o",
-          messages: memory
+          model: "openai/gpt-4o",   // ✅ best model
+          messages: messages
         })
       });
 
-      const data = await res.json();
-      const reply = data.choices?.[0]?.message?.content || "No reply";
-
-      // Step 3: Add GPT reply to memory
-      memory.push({ role: "assistant", content: reply });
-
-      // Step 4: Save updated memory
-      localStorage.setItem("chat_memory", JSON.stringify(memory));
-
-      document.getElementById("response").innerText = reply;
-      document.getElementById("prompt").value = "";
+      const data = await response.json();
+      const botReply = data.choices?.[0]?.message?.content || "No reply";
+      messages.push({ role: "assistant", content: botReply });
+      showMessage("GPT: " + botReply, "bot");
     }
 
-    function clearMemory() {
-      memory = [];
-      localStorage.removeItem("chat_memory");
-      document.getElementById("response").innerText = "Memory cleared.";
+    function showMessage(text, type) {
+      const chat = document.getElementById("chat");
+      const msg = document.createElement("div");
+      msg.className = "msg " + type;
+      msg.textContent = text;
+      chat.appendChild(msg);
+      chat.scrollTop = chat.scrollHeight;
     }
   </script>
 </body>
