--- a/index.html
+++ b/index.html
@@ -1,65 +1,50 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>GPT-4o Unlimited Chat</title>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>GPT-4o Mobile</title>
   <style>
-    body { font-family: Arial; padding: 20px; background: #111; color: white; }
-    #chat { max-height: 70vh; overflow-y: auto; }
-    .msg { margin: 10px 0; }
-    .user { color: cyan; }
-    .bot { color: lime; }
-    input, button { padding: 10px; font-size: 16px; }
+    body { font-family: Arial; margin: 0; padding: 20px; background: #111; color: #fff; }
+    textarea, input { width: 100%; margin-top: 10px; padding: 10px; font-size: 16px; background: #222; color: #fff; border: 1px solid #444; border-radius: 5px; }
+    button { padding: 10px 15px; margin-top: 10px; background: #4caf50; color: white; border: none; border-radius: 5px; font-size: 16px; }
+    #chat { margin-top: 20px; max-height: 400px; overflow-y: auto; white-space: pre-wrap; }
   </style>
 </head>
 <body>
-  <h2>GPT-4o Chat (Unlimited + Memory)</h2>
-  <div id="chat"></div>
-  <input id="userInput" placeholder="Type your message..." />
+  <h2>🧠 GPT-4o Mobile (OpenRouter API)</h2>
+
+  <textarea id="prompt" placeholder="Type your message here..."></textarea>
   <button onclick="sendMessage()">Send</button>
 
+  <div id="chat"></div>
+
   <script>
-    const apiKey = "sk-..."  // <- ✅ yahan apna OpenRouter API key daal
-    const messages = [
-      { role: "system", content: "You are a helpful assistant with memory." }
-    ];
+    const apiKey = "sk-PASTE-YOUR-OPENROUTER-KEY-HERE"; // 👈 yahan key paste karna
 
     async function sendMessage() {
-      const input = document.getElementById("userInput");
-      const userText = input.value.trim();
-      if (!userText) return;
+      const prompt = document.getElementById("prompt").value;
+      const chatDiv = document.getElementById("chat");
 
-      messages.push({ role: "user", content: userText });
-      showMessage("You: " + userText, "user");
-      input.value = "";
+      chatDiv.innerHTML += `👤 You: ${prompt}\n`;
 
       const response = await fetch("https://openrouter.ai/api/v1/chat/completions", {
         method: "POST",
         headers: {
           "Authorization": `Bearer ${apiKey}`,
-          "Content-Type": "application/json",
-          "HTTP-Referer": "https://<terausername>.github.io", // 🔁 replace this
-          "X-Title": "GPT Mobile App"
+          "Content-Type": "application/json"
         },
         body: JSON.stringify({
-          model: "openai/gpt-4o",   // ✅ best model
-          messages: messages
+          model: "openai/gpt-4o", // 👈 GPT-4o
+          messages: [{ role: "user", content: prompt }]
         })
       });
 
       const data = await response.json();
-      const botReply = data.choices?.[0]?.message?.content || "No reply";
-      messages.push({ role: "assistant", content: botReply });
-      showMessage("GPT: " + botReply, "bot");
-    }
+      const reply = data.choices?.[0]?.message?.content || "⚠️ Error: No response";
 
-    function showMessage(text, type) {
-      const chat = document.getElementById("chat");
-      const msg = document.createElement("div");
-      msg.className = "msg " + type;
-      msg.textContent = text;
-      chat.appendChild(msg);
-      chat.scrollTop = chat.scrollHeight;
+      chatDiv.innerHTML += `🤖 GPT-4o: ${reply}\n\n`;
+      document.getElementById("prompt").value = "";
     }
   </script>
 </body>
