--- a/index.html
+++ b/index.html
@@ -1,51 +1,78 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>GPT-4o Mobile</title>
+  <title>GPT-4o Chat App</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
-    body { font-family: Arial; margin: 0; padding: 20px; background: #111; color: #fff; }
-    textarea, input { width: 100%; margin-top: 10px; padding: 10px; font-size: 16px; background: #222; color: #fff; border: 1px solid #444; border-radius: 5px; }
-    button { padding: 10px 15px; margin-top: 10px; background: #4caf50; color: white; border: none; border-radius: 5px; font-size: 16px; }
-    #chat { margin-top: 20px; max-height: 400px; overflow-y: auto; white-space: pre-wrap; }
+    body { background-color: #111; color: #fff; font-family: sans-serif; padding: 20px; }
+    #chatbox { max-height: 60vh; overflow-y: auto; border: 1px solid #444; padding: 10px; border-radius: 10px; background: #222; }
+    .user { color: #00f5ff; margin: 5px 0; }
+    .bot { color: #90ee90; margin: 5px 0; }
+    textarea { width: 100%; height: 100px; margin-top: 10px; border-radius: 5px; background: #000; color: #fff; padding: 10px; border: 1px solid #444; }
+    button { padding: 10px; font-size: 16px; background: #28a745; color: white; border: none; border-radius: 5px; margin-top: 10px; }
   </style>
 </head>
 <body>
-  <h2>🧠 GPT-4o Mobile (OpenRouter API)</h2>
-
-  <textarea id="prompt" placeholder="Type your message here..."></textarea>
+  <h2>🧠 GPT-4o Chat (with Memory)</h2>
+  <div id="chatbox"></div>
+  <textarea id="prompt" placeholder="Type your message..."></textarea>
   <button onclick="sendMessage()">Send</button>
-
-  <div id="chat"></div>
+  <button onclick="clearChat()">🧹 Clear Chat</button>
 
   <script>
-    const apiKey = "sk-PASTE-YOUR-OPENROUTER-KEY-HERE"; // 👈 yahan key paste karna
+    const apiKey = "sk-3xhjT9283ycbv7..."; //
+
+    let messages = JSON.parse(localStorage.getItem("chat_memory") || "[]");
+
+    function updateChatBox() {
+      const chat = document.getElementById("chatbox");
+      chat.innerHTML = "";
+      messages.forEach(m => {
+        const msgDiv = document.createElement("div");
+        msgDiv.className = m.role === "user" ? "user" : "bot";
+        msgDiv.textContent = `${m.role === "user" ? "You" : "GPT"}: ${m.content}`;
+        chat.appendChild(msgDiv);
+      });
+      chat.scrollTop = chat.scrollHeight;
+    }
 
     async function sendMessage() {
-      const prompt = document.getElementById("prompt").value;
-      const chatDiv = document.getElementById("chat");
+      const prompt = document.getElementById("prompt").value.trim();
+      if (!prompt) return;
 
-      chatDiv.innerHTML += `👤 You: ${prompt}\n`;
+      messages.push({ role: "user", content: prompt });
+      updateChatBox();
+      document.getElementById("prompt").value = "";
 
-      const response = await fetch("https://openrouter.ai/api/v1/chat/completions", {
+      const res = await fetch("https://openrouter.ai/api/v1/chat/completions", {
         method: "POST",
         headers: {
           "Authorization": `Bearer ${apiKey}`,
-          "Content-Type": "application/json"
+          "Content-Type": "application/json",
+          "HTTP-Referer": "https://yourusername.github.io",
+          "X-Title": "GPT App"
         },
         body: JSON.stringify({
-          model: "openai/gpt-4o", // 👈 GPT-4o
-          messages: [{ role: "user", content: prompt }]
+          model: "openai/gpt-4o",
+          messages: messages
         })
       });
 
-      const data = await response.json();
-      const reply = data.choices?.[0]?.message?.content || "⚠️ Error: No response";
+      const data = await res.json();
+      const reply = data.choices?.[0]?.message?.content || "⚠️ No reply";
+      messages.push({ role: "assistant", content: reply });
 
-      chatDiv.innerHTML += `🤖 GPT-4o: ${reply}\n\n`;
-      document.getElementById("prompt").value = "";
+      localStorage.setItem("chat_memory", JSON.stringify(messages));
+      updateChatBox();
     }
+
+    function clearChat() {
+      messages = [];
+      localStorage.removeItem("chat_memory");
+      updateChatBox();
+    }
+
+    window.onload = updateChatBox;
   </script>
 </body>
 </html>
